--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1751,6 +1751,15 @@ input, select, textarea {
 	section, article {
 		margin-bottom: 3em;
 	}
+	
+	section.fixed200 {
+		display: flex;
+		align-items: center;
+		min-height: 200px;
+		margin: 0;
+		padding: 0;
+		background: white;
+	}
 
 		section > :last-child,
 		section > .container, section:last-child, article > :last-child,
@@ -1764,6 +1773,7 @@ input, select, textarea {
 
         article > .info {
             font-size: 75%;
+			background: white;
             /*line-height:normal;*/
         }
 
@@ -1800,6 +1810,12 @@ input, select, textarea {
 			display: block;
 			width: 100%;
 		}
+		
+		.image.fixed200 {
+			display: block;
+			width: 100%;
+			min-height: 250px;
+		}
 
 		.image.featured {
 			display: block;
@@ -1809,12 +1825,13 @@ input, select, textarea {
 
 		.image.centered {
 			display: block;
-			margin: 0 0 2em 0;
+			margin: 0; /* 0 2em 0;*/
 		}
 
 			.image.centered img {
 				margin: 0 auto;
 				width: auto;
+				align-items: center;
 			}
 
 /* List */
@@ -2233,8 +2250,8 @@ input, select, textarea {
 		padding: 3em 0 4em 0;
 		box-shadow: inset 0 1px 0 0 rgba(0, 0, 0, 0.05), inset 0 0.1em 0.1em 0 rgba(0, 0, 0, 0.025);
 		font-size: 0.8em;
-	}
-
+	}		
+		
 		#footer .copyright {
 			cursor: default;
 			margin: 0;
